Fixxato il problema dello scroll sui suggerimenti che andava in contrasto con quello globale, altri fix grafici e ai cookie

--- a/Template/Progetto.Web/wwwroot/css/bundle-global.css
+++ b/Template/Progetto.Web/wwwroot/css/bundle-global.css
@@ -12500,6 +12500,7 @@ textarea.form-control-lg {
   align-items: center;
   background: #e2e3e5;
   color: black;
+  margin-top: 6px;
   padding: 2px 6px;
   border-radius: 12px;
   font-size: 0.9em;
@@ -12647,9 +12648,15 @@ textarea.form-control-lg {
   background: #24282C;
   border-radius: 6px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+  overscroll-behavior: contain;
   list-style: none;
   margin: 0;
   padding: 6px 0;
+}
+
+.stop-body-scroll {
+  scrollbar-gutter: stable;
+  overflow: hidden !important;
 }
 
 .suggestions-list li {
