--- a/Template/Progetto.Web/wwwroot/css/site.components.scss
+++ b/Template/Progetto.Web/wwwroot/css/site.components.scss
@@ -460,6 +460,7 @@
     align-items: center;
     background: #e2e3e5;
     color: black;
+    margin-top: 6px;
     padding: 2px 6px;
     border-radius: 12px;
     font-size: 0.9em;
